src/assets/styles/views/entry/_editor.scss
.entryEditor {
  padding-top: 50px;
  padding-bottom: 50px;
  font-size: 16px;
  z-index: 100;
  @include fluid(padding-left padding-right, 600px, 1100px, 20px, 58px);
  &--header {
    position: fixed;
    top: 50px;
    right: 60px;
    z-index: 200;
    display: flex;
    align-items: flex-end;
    ._bcmsInput--select {
      margin-right: 10px;
    }
    @include media(900px, 'max') {
      top: 5px;
      right: 20px;
      position: absolute;
    }
  }
  &--body {
    max-width: 680px;
    width: 100%;
  }
  &--instructions {
    margin-bottom: 20px;
    .markdown-box-display {
      padding: 0;
      margin-top: 10px;
      color: rgba(var(--dark), 1);
      border: none;
      p {
        margin: 0;
      }
      strong,
      h1,
      h2,
      h3,
      h4,
      h5,
      h6 {
        font-weight: 500;
      }
    }
    &-title {
      font-size: 12px;
      line-height: 18px;
      letter-spacing: 0.06em;
      text-transform: uppercase;
      color: rgba(var(--dark), 1);
      display: flex;
      align-items: flex-start;
      gap: 8px;
      svg {
        margin: 4 px 0 0;
        width: 4px;
        height: auto;
        position: relative;
        will-change: transform;
        // transform: rotate(-90deg);
        fill: rgba(var(--dark), 1);
      }
      &.is-active {
        svg {
          transform: rotate(90deg);
        }
      }
    }
    @include media(900px, 'max') {
      margin-top: 20px;
    }
  }
  &--meta {
    background: rgba(#f8f8fc, 0.5);
    border: 0.5px solid rgba(var(--grey), 1);
    border-radius: 14px;
    padding: 22px 20px;
    &-row {
      &_slug {
        &:not(:last-child) {
          margin-bottom: 45px;
        }
      }
    }
    &-title {
      display: flex;
      flex-direction: column;
      span {
        text-transform: uppercase;
        font-size: 12px;
        line-height: 18px;
        letter-spacing: 0.06em;
        text-transform: uppercase;
        color: rgba(var(--dark), 1);
      }
      .ql-editor {
        padding: 0;
        background: transparent;
        line-height: 1.25;
        letter-spacing: 0px;
        color: rgba(var(--dark), 1);
        width: 100%;
        font-weight: 400;
        position: relative;
        margin-top: 5px;
        cursor: text;
        @include fluid(font-size, 320px, 1850px, 38px, 50px);
        &:before {
          color: rgba(var(--grey), 0.5);
          font-style: normal;
          font-size: inherit;
          left: 0;
          right: unset;
          position: relative !important;
        }
        br {
          display: none;
        }
      }
    }
    &-slug {
      margin-top: 16px;
      flex-wrap: nowrap;
      span,
      input {
        line-height: 1.25;
        color: rgba(var(--dark), 1);
        font-size: inherit;
        padding: 0;
        margin: 0;
        border: 0;
        @include placeholder {
          line-height: 1.25;
          color: rgba(var(--dark), 1);
          opacity: 1;
          font-size: inherit;
        }
      }
      label {
        height: 36px;
        border-radius: 18px;
        border: 1px solid rgba(var(--grey), 1);
        background: rgba(#fff, 0);
        transition-property: background;
        transition-duration: 0.34s;
        transition-timing-function: ease;
        transition-delay: 0.1s;
        padding-left: 18px;
        padding-right: 18px;
        display: flex;
        align-items: center;
        overflow: hidden;
      }
      input {
        flex-grow: 1;
      }
      &:focus-within,
      &:hover {
        label {
          background: rgba(#fff, 1);
        }
      }
    }
  }
  &--content {
    padding-top: 65px;
    &-title {
      font-size: 28px;
      line-height: 1.07;
      letter-spacing: -0.01em;
      color: rgba(var(--dark), 1);
      margin-bottom: 30px;
    }
  }
  &--footer {
    display: block;
    margin: 0 auto;
    text-align: center;
  }
}

